# gards

./: README.md  ReadMe.md  constraints.txt  docker-compose.yml  license.txt  mkdocs.yml  requirements.txt  setup.cfg
auth/: docker-compose.yml
auth/dummy/: dex-config.yaml
db/: docker-compose.yml
db/config/: schema.sql
deployment/: README.md  delete_resources.sh  deploy_resources.sh  dpc-deploy.k8s.yaml  frpc.toml  frps.toml  gke-deploy.k8s.yaml
docs/: 1-user-guide.md  2-development-guide.md  3-deployment-guide.md  index.md  mkdocs.md
examples/: README.MD  bushfire.json  bushfire.yml  cyclone.json  cyclone.yml  earthquake.json  earthquake.yml  flood.json  flood.yml  observations.md
predictor/: Dockerfile  pyproject.toml  requirements.txt
predictor/data/: .gitignore  decision_tree.yml  decision_tree_multiple_bands_sample.yml  test_e5.yml
predictor/src/anomaly/: logger.py  predictor.py  suggestor.py
queue/: docker-compose.yml
queue/config/: nats-server.conf
queue/init/: .gitignore  providers.tf  streams.tf
terraform/: README.md
terraform/app/: azure.tf  helm.tf  jetstream.tf  kubernetes.tf  terraform.tf  vars.tf
terraform/cluster/: azure.tf  terraform.tf  vars.tf
terraform/infrastructure/: .gitignore  helm.tf  kubernetes.tf  terraform.tf  vars.tf
terraform/queue/: jetstream.tf  terraform.tf
web/: Dockerfile  pyproject.toml
web/public/: index.html  questionset.html  script.js  style.css
web/src/anomaly/: background.py  gen_samples_for_metrics.py  web.py
